--- a/style.css
+++ b/style.css
@@ -33,8 +33,7 @@ body {
   flex-flow: column wrap;
   justify-content: space-between;
   width: 100%;
-  max-width: 867px;
-  margin: 25px 10px;
+  margin: 25px 0;
   height: calc(100% - 50px);
   border: var(--border);
   background: var(--msger-bg);
@@ -189,6 +188,9 @@ body {
   padding-top: 25px;
   overflow-x: hidden;
   height: inherit;
+  transition: transform 0.3s ease;
+  transform: translateX(-240px);
+  z-index: 1000;
 }
 }
 
@@ -204,10 +206,18 @@ body {
     padding-top: 25px;
     overflow-x: hidden;
     height: inherit;
-    transition: left 0.5s;
+    transition: transform 0.3s ease;
+    transform: translateX(-240px);
     z-index: 1000;
     user-select:nonel
   }
+
+  .sidebar a {
+    display: block;
+    padding: 15px;
+    color: #fff;
+    text-decoration: none;
+}
   
   .sidebar ul {
     list-style-type: none;
@@ -236,6 +246,7 @@ body {
   color: #d9d9d9;
   padding: 15px;
 }
+
 
 .tablink {
   display: flow-root;
@@ -279,6 +290,17 @@ body {
 
 #tab4 {
   display: block;
+}
+
+#menu-btn {
+  background-color: royalblue;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  position: relative;
+  top: -25px;
+  left: -300px;
 }
 
 #delete-button {
