--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ body {
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
-  width: 100%;
+  width: 75%;
   margin: 25px 0;
+  margin-right: 5%;
   height: calc(100% - 50px);
   border: var(--border);
   background: var(--msger-bg);
-  box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
 }
 
 .msger-header {
@@ -57,8 +57,20 @@ body {
   display: none;
 }
 
-.msger-header-options {
-  float: right;
+.msger-header-options1 {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-top: -18px;
+  height: 100%;
+}
+
+.msger-header-options2 {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  margin-top: -18px;
+  height: 100%;
 }
 
 .msger-chat {
@@ -160,7 +172,7 @@ body {
 }
 
 .msger-input {
-  flex: 1;
+  flex: 1.5;
   background: #444654;
   color: #d9d9d9;
 }
@@ -189,7 +201,7 @@ body {
   overflow-x: hidden;
   height: inherit;
   transition: transform 0.3s ease;
-  transform: translateX(-240px);
+  transform: translateX(-300%);
   z-index: 1000;
 }
 }
@@ -207,7 +219,7 @@ body {
     overflow-x: hidden;
     height: inherit;
     transition: transform 0.3s ease;
-    transform: translateX(-240px);
+    transform: translateX(-300%);
     z-index: 1000;
     user-select:nonel
   }
@@ -298,9 +310,8 @@ body {
   border: none;
   padding: 10px 15px;
   cursor: pointer;
-  position: relative;
-  top: -25px;
-  left: -300px;
+  margin-left: 100px;
+  position: sticky;
 }
 
 #delete-button {
@@ -314,8 +325,14 @@ body {
   text-decoration: underline;
   cursor: pointer;
   font-size: 16px;
-  position: relative;
-  top: -20px;
+  position: sticky;
+  margin: 0 10px;
+}
+
+@media (max-width: 640px) {
+  #delete-button {
+    font-size: 14px;
+  }
 }
 
 #id {
