--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 .msger {
   position: relative;
   display: flex;
+  overflow: hidden;
   flex-flow: column wrap;
   justify-content: space-between;
   width: 75%;
@@ -38,6 +39,7 @@ body {
   height: calc(100% - 50px);
   border: var(--border);
   background: var(--msger-bg);
+  transition: width 0.3s ease;
 }
 
 .msger-header {
@@ -75,6 +77,7 @@ body {
 
 .msger-chat {
   flex: 1;
+  flex-grow: 1;
   overflow: auto;
   scroll-behavior: smooth;
   padding: 10px;
@@ -256,6 +259,7 @@ body {
   cursor: auto;
   background: #2b2c34;
   color: #d9d9d9;
+  height: 41.5px;
   padding: 15px;
 }
 
@@ -327,6 +331,7 @@ body {
   font-size: 16px;
   position: sticky;
   margin: 0 10px;
+  margin-right: -5px;
 }
 
 @media (max-width: 640px) {
