--- a/style.css
+++ b/style.css
@@ -42,6 +42,33 @@ body {
     background: var(--msger-bg);
     transition: width 0.3s ease;
   }
+
+  .msger-header-title {
+    display: block;
+    margin-right: -30%;
+  }
+  
+  .msger-header-options1 {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 100%;
+    margin-left: 0;
+  }
+  
+  .msger-header-options2 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 100%;
+  }
+
+  .msger-header-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -59,12 +86,33 @@ body {
     background: var(--msger-bg);
     transition: width 0.3s ease;
   }
+
+  .msger-header-title {
+    display: block;
+    margin-right: -15%;
+  }
+  
+  .msger-header-options1 {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+  
+  .msger-header-options2 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+  }
+
+  .msger-header-message {
+    display: none;
+  }
 }
 
-
-
 .msger-header {
+  display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px;
   border-bottom: var(--border);
   background: #2b2c34;
@@ -72,28 +120,21 @@ body {
   height: 40px;
 }
 
-.msger-header-title {
-  display: block;
-}
+
 
 .id_session{
   display: none;
 }
 
-.msger-header-options1 {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  margin-top: -18px;
-  height: 100%;
-}
 
-.msger-header-options2 {
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  margin-top: -18px;
-  height: 100%;
+
+.header-text {
+  font-size: 18px;
+  font-weight: inherit;
+  color: #d9d9d9; /* Change the color to match the header text color */
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .msger-chat {
@@ -339,7 +380,6 @@ body {
   border: none;
   padding: 10px 15px;
   cursor: pointer;
-  margin-left: 100px;
   position: sticky;
 }
 
