--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ body {
 }
 
 .msg-bubble {
-  max-width: 380px;
+  max-width: 500px;
   padding: 5px;
   border-radius: 10px;
   background: var(--left-msg-bg);
@@ -414,13 +414,17 @@ body {
   display: none;
 }
 
-.code-block {
-  font-family: monospace;
-  font-size: 14px;
-  color: #333;
-  background-color: #f5f5f5;
+pre.custom-code {
+  /* Add your custom styles for the code block container (pre) here */
+  background-color: black;
   padding: 10px;
-  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+code.custom-code {
+  /* Add your custom styles for the code block content (code) here */
+  font-family: "Courier New", monospace;
+  color: gold;
 }
 
 .copy-button {
